--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.5",
@@ -13,7 +14,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "codemon server.js",
+    "test": "nodemon server.js",
     "start": "node server.js"
   },
   "keywords": [
